syntax = "proto3";

package odroe.socfony;

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

// Verification code service.
service VerificationCodeService {
  // Send a verification code to the specified phone number.
  rpc Send(google.protobuf.StringValue) returns (google.protobuf.Empty);

  // Send a verification code to the authenticated user's phone number.
  rpc SendByAuthenticatedUser(google.protobuf.Empty) returns (google.protobuf.Empty);
}
