syntax = "proto3";
package odroe.socfony;

import "google/protobuf/timestamp.proto";

// The Access token service definition.
service AccessTokenService {
    // Create a new access token.
    rpc Create(CreateAccessTokenRequest) returns (CreateAccessTokenResponse);
}

// The request message for the Create method.
message CreateAccessTokenRequest {
    string phone = 1;
    string code = 2;
}

// the response message for the Create method.
message CreateAccessTokenResponse {
    string token = 1;
    string userId = 2;
    google.protobuf.Timestamp expiredAt = 3;
    google.protobuf.Timestamp createdAt = 4;
    google.protobuf.Timestamp refreshExpiredAt = 5;
}
